--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="https://github.com/jjonesblu/sito/blob/3a55f554bb1af6ae39fa9ac2b7f79fbba66da4a2/White%20Minimalist%20Simple%20Aesthetic%20Name%20Twitter%20Header.png" alt="Header Image">
+        <img src="header.png" alt="Header Image">
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
